@@ -4,6 +4,8 @@ history management of subversion.
 
 2017-xx-yy releases/3.12.8
         - add define for FORTRAN_INTEGER_TYPE to config_ipopt_default.h
+        - IpoptApplication::RethrowNonIpoptException() now returns whether
+          non-ipopt exceptions were rethrown before the method was called.
 
 2017-02-25 releases/3.12.7
         - removed compiler flag -pedantic-errors to avoid problems with some
